--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -412,14 +412,14 @@
             line-height: 2;
         }
         .el-input__inner {
-            width: 202px;
+            width: 232px;
         }
         .el-dialog__header {
             padding: .625rem .9375rem .3125rem !important;
         }
         .violation-item {
             .el-input__inner {
-                width: 600px;
+                width: 36.5rem;
             }
             
         }
@@ -434,6 +434,31 @@
             line-height: 6.125rem;
             vertical-align: top;
         }
+        .el-upload-list__item {
+            overflow: hidden;
+            background-color: #fff;
+            border: .0625rem solid #c0ccda;
+            border-radius: .375rem;
+            box-sizing: border-box;
+            width: 6.25rem;
+            height: 6.25rem;
+            margin: 0 .5rem .5rem 0;
+            display: inline-block;
+        }
+        .el-upload-list__item-actions {
+            position: absolute;
+            width: 6.25rem;
+            height: 6.25rem;
+            left: 0;
+            top: 0;
+            cursor: default;
+            text-align: center;
+            color: #fff;
+            opacity: 0;
+            font-size: 1.25rem;
+            background-color: rgba(0,0,0,.5);
+            transition: opacity .3s;
+        }  
     }
     .dislog-picture {
         .el-dialog__header {
