--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -458,7 +458,13 @@
             font-size: 1.25rem;
             background-color: rgba(0,0,0,.5);
             transition: opacity .3s;
-        }  
+        } 
+        .upload-picture {
+            width: 6.25rem;
+            height: 6.25rem;
+            border-radius: .375rem;
+            margin: 0 8px 8px 0;
+        } 
     }
     .dislog-picture {
         .el-dialog__header {
