修改主题内容字体大小

--- a/Page/scss/pages/_notice.scss
+++ b/Page/scss/pages/_notice.scss
@@ -68,9 +68,10 @@
 		line-height: 18px;
 	}
 	.tr5{
+		font-size: 14px;
 		text-indent: 2em;
 		text-align: left;
-		height: 300px;
+		height:400px;
 	}
 	.tr8{
 		height: 120px;
@@ -112,6 +113,7 @@
 		bottom: 0;
 		right: 10px;
 		margin-bottom: 30px;
+		margin-top: 10px;
 	}
 	.footer{
 		border: none;
