违规记录图片弹窗的高度确定

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -483,6 +483,9 @@
             height: 100px !important;
         }
     }
+    .el-carousel__item {
+        overflow: scroll !important;
+    }
 }
 .el-autocomplete-suggestion .el-popper {
     width: 600px !important;
