违规记录图片弹窗样式修改

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -484,7 +484,7 @@
         }
     }
     .el-carousel__item {
-        overflow: scroll !important;
+        overflow-y: auto !important;
     }
 }
 .el-autocomplete-suggestion .el-popper {
