违规记录图片弹窗的最大高度确定为720px

--- a/Page/scss/pages/_violation.scss
+++ b/Page/scss/pages/_violation.scss
@@ -485,6 +485,7 @@
     }
     .el-carousel__item {
         overflow-y: auto !important;
+        overflow-x: hidden !important;
     }
 }
 .el-autocomplete-suggestion .el-popper {
